# IdleRunner

./: CMakeLists.txt  IdleRunner.sh  README.md
src/: main.cpp
